[package]
name = "residua-mutf8"
version = "1.0.0"

authors = ["Sean C. Roach <me@seancroach.dev>"]
categories = ["encoding"]
edition = "2021"
description = "A library for converting between MUTF-8 and UTF-8."
keywords = ["utf8", "mutf8", "encode", "decode"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/residua/mutf8"

[lib]
name = "mutf8"

[dependencies]
residua-cesu8 = "1"
