[package]
name = "residua-mutf8"
version = "2.0.0"

authors = ["Sean C. Roach <me@seancroach.dev>"]
categories = ["encoding", "no-std"]
edition = "2021"
description = "A library for converting between MUTF-8 and UTF-8."
keywords = ["utf8", "mutf8", "encode", "decode", "no_std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/residua/mutf8"

[lib]
name = "mutf8"

[features]
default = ["std"]
std = []

[dependencies]
residua-cesu8 = "2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
